# google-ai-search-chat

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: publish.yml
google_ai_search_chat/: __init__.py  browser.py  chat.py  session.py
