[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "google-ai-search-chat"
version = "0.1.2"
description = "Unofficial Python client for Google AI Search with multi-tab chat support"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [
    {name = "SawaPlayGO", email = "sawaglumov2006@maiil.ru"},
]
keywords = ["google", "ai", "search", "chat", "browser", "playwright"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "playwright>=1.60.0",
    "playwright-stealth>=2.0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0",
    "isort>=5.0",
    "mypy>=1.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/google-ai-search-chat"
Documentation = "https://github.com/yourusername/google-ai-search-chat/blob/main/README.md"
Repository = "https://github.com/yourusername/google-ai-search-chat.git"
Issues = "https://github.com/yourusername/google-ai-search-chat/issues"

[tool.hatch.version]
path = "google_ai_search_chat/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["google_ai_search_chat"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.ruff]
line-length = 100
target-version = "py312"
